--- a/src/Clients/BlazorWeb/BlazorChat.Client.Web/_Imports.razor
+++ b/src/Clients/BlazorWeb/BlazorChat.Client.Web/_Imports.razor
@@ -8,3 +8,7 @@
 @using Microsoft.JSInterop
 @using BlazorChat.Client.Web
 @using BlazorChat.Client.Web.Shared
+@using BlazorChat.Client.Web.Infrastructure.Interfaces
+@using BlazorChat.Common.Models.Queries
+@using BlazorChat.Client.Web.Pages;
+@using BlazorChat.Client.Web.Pages.MainPages
