--- a/src/Clients/BlazorWeb/BlazorChat.Client.Web/_Imports.razor
+++ b/src/Clients/BlazorWeb/BlazorChat.Client.Web/_Imports.razor
@@ -11,4 +11,5 @@
 @using BlazorChat.Client.Web.Infrastructure.Interfaces
 @using BlazorChat.Common.Models.Queries
 @using BlazorChat.Client.Web.Pages;
-@using BlazorChat.Client.Web.Pages.MainPages
+@using BlazorChat.Client.Web.Pages.MainPages;
+@using Microsoft.AspNetCore.Components.Authorization;
