--- a/src/Clients/BlazorWeb/BlazorChat.Client.Web/Shared/MainLayout.razor
+++ b/src/Clients/BlazorWeb/BlazorChat.Client.Web/Shared/MainLayout.razor
@@ -1,11 +1,9 @@
 ﻿
 @inherits LayoutComponentBase
-
 <div class="navbar fixed-top text-white">
     <div class="logo">
         <a href="/" class="bg-white">
-            <img height="29" src=""/>
-            @*TODO img*@
+            <img height="29" src="logo/Image-1.jpg"/>
         </a>
     </div>
     <div class="search-box">
@@ -16,10 +14,10 @@
                        @bind-value="@searchText"
                        @bind-value:event="oninput"
                        @onkeypress="@SearchKeyDown"
-                       @onfocusout="@OnSearchFocusOut"
-                       placeholder="Search in site"/>
+                       @onfocusout="OnSearchFocusOut"
+                       placeholder="Search in Site"/>
             </div>
-            <button type="button" class="btn btn-chat btn-success"
+            <button type="button" class="btn btn-chat btn btn-success"
                     @onclick="@Search"
                     @onfocusout="@OnSearchFocusOut">
                 <i class="fa fa-search h-75"></i>
@@ -28,7 +26,7 @@
         @if (showSearchResult)
         {
             <ul class="list-group">
-                @foreach (var  searchItem in searchResult)
+                @foreach (var searchItem in searchResult)
                 {
                     <li class="list-group-item">
                         <a @onclick="(async () => await GoEntry(searchItem.Id))">
@@ -37,55 +35,51 @@
                     </li>
                 }
             </ul>
-        }@*
-        <AuthorizeView>
-            <Authorized>
-                <div class="top-nav">
-                    <input type="button" class="form-control btn-success btn-chat w-auto" value="Create Entry" @onclick="@NavigateCreateEntryPage"/>
-                    <input type="button" class="form-control btn-success btn-chat w-auto" value="Me" @onclick="@NavigateMePage"/>
-                    <input type="button" class="form-control btn-success btn-chat w-auto" value="Logout" @onclick="@NavigateLogoutPage"/>
-                </div>
-            </Authorized>
-        </AuthorizeView>
-        <NotAuthorized>
-            <div class="top-nav">
-                <input type="button" class="form-control btn-success btn-chat w-auto" value="Login" @onclick="@NavigateLoginPage"/>
-            </div>
-        </NotAuthorized>
-        *@
-        <div class="sub-nav">
-            <a class="sub-nav-item active">item1</a>
-            <a class="sub-nav-item">item2</a>
-            <a class="sub-nav-item">item3</a>
-            <a class="sub-nav-item">item4</a>
-            <a class="sub-nav-item">item5</a>
-            <a class="sub-nav-item">item6</a>
-            <a class="sub-nav-item">item7</a>
-            <a class="sub-nav-item">item8</a>
-
-        </div>
+        }
     </div>
-    <div class="page">
-        <div class="sidebar">
-            <h5 class="text-white text-center sidebar-heading">@EntriesSubject</h5>
-            <a class="more-data"@onclick="@RefreshEntries">refresh</a>
-            <ul class="list-group">
-                <EntriesComponent @ref="EntriesComponent"></EntriesComponent>
-            </ul>
-            @* <NavMenu/>*@
-        </div>
-        <main>
-            <div class="top-row px-4">
-
+      <AuthorizeView>
+        <Authorized>
+            <div class="top-nav">
+                <input type="button" class="form-control btn-success btn-chat w-auto" value="Create Entry" @onclick="NavigateCreateEntryPage" />
+                <input type="button" class="form-control btn-success btn-chat w-auto" value="ME" @onclick="NavigateMePage" />
+                <input type="button" class="form-control btn-success btn-chat w-auto" value="Logout" @onclick="@NavigateLogoutPage" />
             </div>
-
-            <article class="content px-4">
-                @Body
-            </article>
-        </main>
+            </Authorized>
+            <NotAuthorized>
+    <div class="top-nav">
+        <input type="button" class="form-control btn-success btn-chat w-auto" value="Login" @onclick="@NavigateLoginPage"/>
+    </div>
+      </NotAuthorized>
+      </AuthorizeView>
+    <div class="sub-nav">
+        <a class="sub-nav-item active">today </a>
+        <a class="sub-nav-item ">agenda</a>
+        <a class="sub-nav-item ">Item3</a>
+        <a class="sub-nav-item ">problematic</a>
+        <a class="sub-nav-item ">follow-up</a>
+        <a class="sub-nav-item ">end</a>
+        <a class="sub-nav-item ">edge</a>
+        <a class="sub-nav-item ">Item8</a>
     </div>
 </div>
+<div class="page">
+    <div class="sidebar">
+        
+        <h5 class="text-white text-center sidebar-heading">@EntriesSubject</h5>
+        <a class="more-data" @onclick="@RefreshEntries">refresh</a>
+        <ul class="list-group">
+            <EntriesComponent @ref="@EntriesComponent"/>
+        </ul>
+    </div>
+    <main>
+        <div class="top-row p-4">
 
+        </div>
+        <article class="content p-4">
+            @Body
+        </article>
+    </main>
+</div>
 @code
 {
     public string EntriesSubject { get; set; } = " ChatBot";
@@ -125,7 +119,7 @@
     }
     private async Task SearchKeyDown(KeyboardEventArgs e)
     {
-        if (e.Code=="Enter"|| e.Code=="NumpadEnter")
+        if (e.Code == "Enter" || e.Code == "NumpadEnter")
         {
             await Search();
         }
@@ -152,6 +146,5 @@
         await OnSearchFocusOut();
         NavigationManager.NavigateTo($"/entry/{entryId}");
     }
-
-
+}
 }
