--- a/src/Clients/BlazorWeb/BlazorChat.Client.Web/Pages/UserPages/UserLoginComponent.razor
+++ b/src/Clients/BlazorWeb/BlazorChat.Client.Web/Pages/UserPages/UserLoginComponent.razor
@@ -1,6 +1,5 @@
 ﻿@page "/login"
-@using Microsoft.AspNetCore.Components
-@using BlazorChat.Common.Models.RequestModel
+
 
 <div class="login-container">
     <div class="row justify-content-center align-items-start h-100">
@@ -22,7 +21,7 @@
                 </div>
                 <br/>
                 <div class="form-group">
-                    <button class="btn-success btn btn-chat">Endeavor to Login</button>
+                    <button class="btn-success btn btn-chat" > Login</button>
                 </div>
             </EditForm>
         </div>
@@ -40,6 +39,7 @@
         try
         {
             var res = await IdentityService.Login(_loginUserCommand);
+            Console.WriteLine("Clicked");
             if (res)
             {
                 errorText = "";
