--- a/src/Clients/BlazorWeb/BlazorChat.Client.Web/Shared/MainLayout.razor
+++ b/src/Clients/BlazorWeb/BlazorChat.Client.Web/Shared/MainLayout.razor
@@ -40,8 +40,8 @@
       <AuthorizeView>
         <Authorized>
             <div class="top-nav">
-                <input type="button" class="form-control btn-success btn-chat w-auto" value="Create Entry" @onclick="NavigateCreateEntryPage" />
-                <input type="button" class="form-control btn-success btn-chat w-auto" value="ME" @onclick="NavigateMePage" />
+                <input type="button" class="form-control btn-success btn-chat w-auto" value="Create Entry" @onclick="@NavigateCreateEntryPage" />
+                <input type="button" class="form-control btn-success btn-chat w-auto" value="ME" @onclick="@NavigateMePage" />
                 <input type="button" class="form-control btn-success btn-chat w-auto" value="Logout" @onclick="@NavigateLogoutPage" />
             </div>
             </Authorized>
@@ -105,6 +105,7 @@
 
     private void NavigateLoginPage()
     {
+        //Console.WriteLine("Clicked");
         NavigationManager.NavigateTo("/login");
     }
 
