--- a/src/Clients/BlazorWeb/BlazorChat.Client.Web/_Imports.razor
+++ b/src/Clients/BlazorWeb/BlazorChat.Client.Web/_Imports.razor
@@ -13,3 +13,8 @@
 @using BlazorChat.Client.Web.Pages;
 @using BlazorChat.Client.Web.Pages.MainPages;
 @using Microsoft.AspNetCore.Components.Authorization;
+@using Microsoft.AspNetCore.Components
+@using BlazorChat.Common.Models.RequestModel
+@using BlazorChat.Client.Web.Pages.Components.Entry.RateComponents;
+@using BlazorChat.Common.Models.Pagination
+@using BlazorChat.Client.Web.Pages.Components.Entry;
