--- a/src/Clients/BlazorWeb/BlazorChat.Client.Web/_Imports.razor
+++ b/src/Clients/BlazorWeb/BlazorChat.Client.Web/_Imports.razor
@@ -17,4 +17,8 @@
 @using BlazorChat.Common.Models.RequestModel
 @using BlazorChat.Client.Web.Pages.Components.Entry.RateComponents;
 @using BlazorChat.Common.Models.Pagination
-@using BlazorChat.Client.Web.Pages.Components.Entry;
+@using BlazorChat.Client.Web.Pages.Components.Entry
+@using BlazorChat.Client.Web.Pages.Pagination
+@using BlazorChat.Client.Web.Pages.Components
+@using BlazorChat.Client.Web.Infrastructure.Extensions
+@using BlazorChat.Client.Web.Pages.UserPages.Components
